--- a/Menu/style/mq.css
+++ b/Menu/style/mq.css
@@ -3,6 +3,7 @@
 @media only screen and (min-width: 768px){
     menu{
         display: block;
+
     }
     span#burger{
         display: none;
@@ -13,6 +14,9 @@
          main{
             width: 768px;
          }
-        
-
+        menu > ul >li >a:hover{
+            background-color: gray;
+            transition: 0.4s;
+            
+        }
 }
