--- a/login/style/mobilefirst.css
+++ b/login/style/mobilefirst.css
@@ -24,9 +24,7 @@ input.log{
     cursor: text;
 }
 h1,p{
-    padding-left: 10px;
-    padding-bottom: 10px;
-}
+    padding-left: 10px;}
 main{
     position: relative;
     height: 100vh;
@@ -66,9 +64,13 @@ section#login > div#form{
     padding-bottom: 10px;
     padding-left: 10px;*/
 
-    text-align: center;
-    margin-bottom: 10px;
+    text-align: left ;
+    margin-bottom: 10px; 
 
+}
+section#login  h1{
+    margin-left: -30px;
+    text-align: center;
 }
 div#form > h1{
     font-size: 2em;
@@ -77,4 +79,79 @@ div#form > h1{
 div#form > p{
     font-size: 1.2em;
 
+}
+div#campo > span{
+    color: white;
+   
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+    
+}
+
+div#campo > input.log{
+background-color: #49a09d;
+font-size: 1em;
+width: calc(100% - 44px);
+height: 100%;
+border: 0px;
+border-radius: 8px;
+transform: translateY(-42px);
+
+
+
+}
+form > input[type=submit]{
+display: block;
+font-size: 1em;
+width: 100%;
+color: white;
+height: 40px;
+border: none;
+background-color: var(--verde);
+border-radius: 5px;
+cursor: pointer;
+}
+form > input[type=submit]:hover{
+    background-color: #2d6462;
+
+}
+ 
+form a.button{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color:  white;
+    color: #49a09d;
+    border: 1px solid #49a09d;
+    border-radius: 5px;
+    text-decoration: none;
+    padding-top: 5px;
+
+}
+
+form > a.button > span{
+    font-size: 0.8em;
+}
+form a.button:hover{
+    background-color: #2d6462;
+}
+form > div#campo{
+background-color: var(--lilas);
+display: block;
+width: 100%;
+height: 40px;
+border-radius: 8px;
+margin: 5px 0px ;
+}
+
+form label{
+    display: none;
+}
+
+div#campo > input.log:focus-within{
+    background-color: white;
+    border: none;
 }
