--- a/login/style/mediaqueries.css
+++ b/login/style/mediaqueries.css
@@ -43,5 +43,9 @@
     body{   
         background-image: linear-gradient(to top, #49a09d, #5f3c82);
     }
+    div#form > p{
+        font-size: 1em;
+        margin: 20px 0px;
+    }
   
 }
