--- a/results-summary-component-main/style.css
+++ b/results-summary-component-main/style.css
@@ -88,7 +88,7 @@ div.fin{
     padding:5px 5px;
 }
 div.fin > p{
-    padding: 5px;
+    padding: 10px;
     font-size: larger;
     
 }
@@ -98,7 +98,7 @@ div.fin > p{
 h1{
     font-size: 1.1em;
     text-align: center;
-    padding-top: 12ppx ;
+    padding-top: 8px ;
 }
 /*Summary Division*/
 div#sum{
