--- a/udemyeg/PriceTable/app.css
+++ b/udemyeg/PriceTable/app.css
@@ -41,7 +41,7 @@ body{
 .panel > div:last-child{
 	border: none;
 }
-.pricing-img{
+.panel img{
 	width: 100%;
 }
 .first{
@@ -75,6 +75,7 @@ body{
 	border-bottom: 1px solid rgba(41, 41, 177, 0.562) ; 
 } 
 .panel span{
+	display: block;
 	font-size: 2rem;
 	text-transform: uppercase;
 	font-weight: bolder;
@@ -109,4 +110,23 @@ body{
 .second a{
 	color: white;
 	background-color: rgb(0, 140, 255);
+}
+@media only screen and (min-width:768px){
+.panel{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	max-width: 600px;
+}
+.panel li{
+	font-size: 0.7rem;
+}
+.panel div{
+	display: flex;
+	justify-content: center;
+	border-bottom: none;
+	margin: auto;
+	border-right: 1px solid rgba(95, 95, 163, 0.562) ;
+}
+
 }
