--- a/udemyeg/PriceTable/app.css
+++ b/udemyeg/PriceTable/app.css
@@ -116,6 +116,8 @@ body{
 	color: white;
 	background-color: rgb(0, 140, 255);
 }
+
+/*Desktops +768px*/
 @media only screen and (min-width:768px){
 .panel{
 	display: flex;
