--- a/udemyeg/PriceTable/app.css
+++ b/udemyeg/PriceTable/app.css
@@ -116,20 +116,20 @@ body{
 	color: white;
 	background-color: rgb(0, 140, 255);
 }
+.second{
+	width: 400px;
+}
 
 /*Desktops +768px*/
 @media only screen and (min-width:768px){
 .panel{
-	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
 	max-width: 600px;
 }
 .panel li{
 	font-size: 0.7rem;
 }
 .panel div{
-	display: flex;
 	justify-content: center;
 	border-bottom: none;
 	margin: auto;
