--- a/udemyeg/PriceTable/app.css
+++ b/udemyeg/PriceTable/app.css
@@ -14,6 +14,7 @@ html{
 }
 body{
 	display: flex;
+	flex-direction: column;
   min-height: 100vh;
   min-width: 100vw;
   background: rgba(24, 24, 206, 0.664);
@@ -116,8 +117,22 @@ body{
 	color: white;
 	background-color: rgb(0, 140, 255);
 }
+.second a:hover{
+	background-color: rgb(0, 68, 255);
+}
 .second{
 	width: 400px;
+}
+footer{
+	background: rgb(0, 183, 255);
+	margin-top: 5px;
+	border-radius: 20px;
+	padding: 5px;
+}
+footer a{
+	text-decoration: none;
+	color: white;
+	font-weight: 600;
 }
 
 /*Desktops +768px*/
