--- a/single-price-grid-component-master/style/estilo.css
+++ b/single-price-grid-component-master/style/estilo.css
@@ -125,8 +125,12 @@ footer > p > a{
 .container{
     max-width: 768px;
     min-width: 500px;
+    height: 400px;
     grid-template-columns: repeat(2,1fr);
     grid-template-rows: repeat(2,1fr);
+}
+.container > div{
+    min-height:400px;
 }
 .container > div.starter{
     grid-column: 1 / 3;
@@ -138,5 +142,8 @@ footer > p > a{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+}
+footer{
+    display: none;
 }
 }
