--- a/single-price-grid-component-master/style/estilo.css
+++ b/single-price-grid-component-master/style/estilo.css
@@ -121,7 +121,7 @@ footer > p > a{
     color: var(--Light_Gray);
     text-decoration: none;
 }
-@media only screen and (min-width:768px){
+@media only screen and (min-width:768px) and (max-width:1440px){
 .container{
     max-width: 768px;
     min-width: 500px;
