--- a/single-price-grid-component-master/style/estilo.css
+++ b/single-price-grid-component-master/style/estilo.css
@@ -15,7 +15,7 @@
 --Grayish_Blue: hsl(218, 22%, 67%);
 --Cyan2: hsl(182, 62%, 43%);
 }
-html{
+html,body{
     min-width: 100vw;
     min-height: 100vh;
 }
@@ -26,6 +26,7 @@ body{
     justify-content: center;
     align-items: center;
     margin: 20px;
+
 
 }
 .container{
@@ -123,14 +124,12 @@ footer > p > a{
 }
 @media only screen and (min-width:768px) and (max-width:1440px){
 .container{
-    max-width: 768px;
-    min-width: 500px;
-    height: 400px;
-    grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(2,1fr);
-}
-.container > div{
-    min-height:400px;
+        max-width: 700px;
+        height: 600px;
+        min-height: 600px;
+        grid-template-columns: repeat(2,1fr);
+        grid-template-rows: repeat(auto-fill,300px);
+       
 }
 .container > div.starter{
     grid-column: 1 / 3;
@@ -142,6 +141,12 @@ footer > p > a{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+}
+.sub{
+    border-bottom-left-radius: 20px;
+}
+.fin{
+    border-bottom-right-radius: 20px;
 }
 footer{
     display: none;
