--- a/intro-component-with-signup-form-master/style/estilo.css
+++ b/intro-component-with-signup-form-master/style/estilo.css
@@ -114,9 +114,11 @@ form input{
     margin-bottom: 20px;
     color: hsl(0, 100%, 74%);
 }
-.success{
+.Success{
+  
     border: 2px solid hsl(154, 59%, 51%);
 }
+
 .attribution { font-size: 11px; text-align: center; 
 padding-top: 10px;}
 .attribution a { color:white;
