--- a/faq-accordion-main/style.css
+++ b/faq-accordion-main/style.css
@@ -74,3 +74,22 @@ display: flex;
     color: yellowgreen ;
     text-decoration: none;
 }
+
+
+@media (min-width: 376px) {
+    body{
+        background-image: url('assets/images/background-pattern-desktop.svg');
+    }
+    .container{
+        width: 65vw;
+    }
+}
+
+@media (min-width: 768px) {
+    body{
+        background-image: url('assets/images/background-pattern-desktop.svg');
+    }
+    .container{
+        width: 500px;
+    }
+}
