--- a/faq-accordion-main/style.css
+++ b/faq-accordion-main/style.css
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700&display=swap');
 :root{    
+
+    /*Marvin Scene*/
 --White: hsl(0, 0%, 100%);
 --Light_pink: hsl(275, 100%, 97%);
 --Grayish_purple: hsl(292, 16%, 49%);
