--- a/news-homepage-main/style.css
+++ b/news-homepage-main/style.css
@@ -99,6 +99,7 @@ body{
     text-transform: uppercase;
     letter-spacing: .3rem;
     font-weight: 700;
+    margin-bottom: 15px;
 }
 .section-data{
     display: flex;
@@ -106,7 +107,7 @@ body{
     width: 100%;
     height: 100%;
     background-color: var(--Very_dark_blue);
-    margin: 30px 0px 0px 0px;
+
 }
 .new-feature{
     width: 100%;
@@ -117,7 +118,6 @@ body{
     font-weight: 800;
     font-size: 2rem;
 }
-
 .section-data .cars-comparison,.ai-era,.dry-doubt{
     color: var(--Off-white);
     width: 100%;
@@ -139,7 +139,28 @@ body{
 .latest-features{
     display: flex;
     flex-direction: column;
-    padding-top: 40px;
+    margin-top: 40px;
+    width: 100%;
 }
-
-
+.pc-upgrade, .top-laptops, .grow-games{
+    display: flex;
+    column-gap: 10px;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+}
+.img-content{
+  width: 50%;
+}
+.img-content img{
+    width: 100%;
+    object-fit: cover;
+}
+.number-id{
+    font-size: 3rem;
+    color: var(--Grayish_blue);
+    font-weight: 700;
+}
+.img-data .pc-data{
+    font-size: 1rem;
+}
