--- a/news-homepage-main/style.css
+++ b/news-homepage-main/style.css
@@ -30,6 +30,7 @@ body{
     flex-direction: column;
     background: var(--Off-white);
     justify-content: center;
+    align-items: center;
 }
 .material-symbols-outlined {
   font-variation-settings:
@@ -37,6 +38,11 @@ body{
   'wght' 400,
   'GRAD' 0,
   'opsz' 24
+}
+.allContent{
+    display: flex;
+    flex-direction: column;
+    max-width: 1600px;
 }
 .grid-container{
     display: grid;
@@ -63,9 +69,12 @@ body{
 .header-content .header-option .menu-field button {
     border: none;
 }
+.menu-field div{
+    display: none;
+}
 .puzzle-img{
     width: auto;
-    height: auto;
+    
 }
 
 .puzzle-img img{
@@ -151,6 +160,7 @@ body{
 }
 .img-content{
   width: 50%;
+  height: 100%;
 }
 .img-content img{
     width: 100%;
@@ -161,6 +171,90 @@ body{
     color: var(--Grayish_blue);
     font-weight: 700;
 }
+.img-data{
+    height: 100%;
+}
 .img-data .pc-data{
     font-size: 1rem;
 }
+#bigImg{
+    display: none;
+}
+
+@media (min-width:577px) {
+    .header-content .header-option{
+        justify-content: space-between;
+        align-items: center;
+
+        .menu-field{
+            display: flex;
+            justify-content: space-around;
+            width: 40%;
+        }
+        .menu-field a{
+            text-decoration: none;
+            color: black;
+            font-size: 1.1rem;
+            font-weight: 700;
+        }
+        .menu-field a:hover{
+            color: var(--Soft_red);
+        }
+    }
+
+    .grid-container{
+        grid-template-columns: repeat(3,1fr);
+        grid-template-rows: auto 1fr auto;
+        gap: 10;
+    }
+    .puzzle-img{
+        grid-column: 1/span 2;
+        max-height: 500px;
+    }
+
+    .section-data{
+        grid-row: 1/ span 2;
+        grid-column: 3/ span 3;
+    }
+
+    .web-dive{
+        grid-column: 1/ span 2;
+        flex-direction: row;
+    }
+    .readmoreBtn:hover{
+        background-color: hsl(5, 32%, 43%);
+    }
+    .latest-features{
+        grid-column: 1/ span 3;
+    }
+
+
+    .header-option button{
+        display: none;
+    }
+    .header-option .menu-field div{
+        display: inline-block;
+    }
+    .header-content{
+        width: 100%;
+        height: 50px;
+    }
+    .latest-features{
+        flex-direction: row;
+    }
+    .latest-features h4:hover{
+        color: var(--Soft_red);
+        cursor: pointer;
+    }
+}
+.attribution { 
+    font-size: 1rem; 
+    text-align: center; 
+    font-weight: 700;   
+}
+.attribution a { 
+    color: var(--Grayish_blue);
+    text-decoration: none; }
+    .attribution a:hover {
+        color: var(--Soft_red);
+    }
