--- a/news-homepage-main/style.css
+++ b/news-homepage-main/style.css
@@ -253,6 +253,9 @@ body{
       display: none;
     }
     
+    .menu-container{
+        display: none;
+    }
     .header-content .header-option{
         justify-content: space-between;
         align-items: center;
